# CNNAdamOptimization

./: CMakeLists.txt
HeartDieseaseAdam/: CMakeLists.txt  HeartDieseaseAdam.cpp  HeartDieseaseAdam.h  Makefile  Neural.cpp  Neural.h  main
